docs/0.17/_sources/api/gammapy.modeling.models.ShellSpatialModel.rst.txt
ShellSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ShellSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ShellSpatialModel.covariance
      ~ShellSpatialModel.default_parameters
      ~ShellSpatialModel.evaluation_radius
      ~ShellSpatialModel.lat_0
      ~ShellSpatialModel.lon_0
      ~ShellSpatialModel.parameters
      ~ShellSpatialModel.phi_0
      ~ShellSpatialModel.position
      ~ShellSpatialModel.position_error
      ~ShellSpatialModel.radius
      ~ShellSpatialModel.tag
      ~ShellSpatialModel.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~ShellSpatialModel.__call__
      ~ShellSpatialModel.copy
      ~ShellSpatialModel.create
      ~ShellSpatialModel.evaluate
      ~ShellSpatialModel.evaluate_geom
      ~ShellSpatialModel.from_dict
      ~ShellSpatialModel.from_parameters
      ~ShellSpatialModel.integrate
      ~ShellSpatialModel.plot
      ~ShellSpatialModel.plot_error
      ~ShellSpatialModel.to_dict
      ~ShellSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: radius
   .. autoattribute:: tag
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: to_dict
   .. automethod:: to_region
